--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
-  <lin rel="preload" href="slike/mobilni.png" as="image" />
+  <link rel="preload" href="slike/mobilni.png" as="image" />
   <link rel="stylesheet" href="knjiga.css" as="style" />
   <link rel="stylesheet" href="responsive.css" as="style" />
   <script src="knjiga.js" defer></script>
