--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="responsive.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
-  <script src="knjiga.js" defer></script>
 </head>
 
 <body>
@@ -129,6 +128,6 @@
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
 </footer>
-
+<script src="knjiga.js" async></script>
 </body>
 </html>
