--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Art" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preload" href="slike/pozadina.png" as="image" />
-  <link rel="preload" href="slike/mobilni.png" as="image" />
+  <link rel="preload" href="slike/pozadina.jpg" as="image" />
+  <link rel="preload" href="slike/mobilni.jpg" as="image" />
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
