--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mima Arbid</title>
   <link rel="icon" type="image/x-icon" href="slike/favicon.ico" />
   <meta name="author" content="Mima Arbid" />
-  <meta name="keywords" content="Mima Arbid, Books, Writer, Art" />
+  <meta name="keywords" content="Mima Arbid, Books, Writer, Artist, I Do Not Belong" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preload" href="slike/pozadina.jpg" as="image" />
@@ -31,25 +31,22 @@
 <aside class="biografija">
   <img alt="Mima's picture" width="409" height="307" src="slike/bw.png" />
   <div class="biografija-text">
+    <p id="wingdings-a">&#97;</p>
     <pre>
     Do you believe in destiny?
-    Do you think that everything happens 
-    for a reason? Do you ever have that 
-    feeling of not belonging?
-    <a href="https://www.goodreads.com/book/show/56043154-i-do-not-belong">I DO NOT BELONG</a> is a story of a
-    young girl desperately trying to find 
-    herself and her place in the world after
-    a tragic event in her life. A chance 
-    encounter with an elderly 
-    American couple and a misunderstanding 
-    on their part changes her life forever. 
-    She is catapulted into a new  world 
-    searching for her destiny. 
+     Do you think that everything happens for a reason? 
+     Do you ever have that feeling of not belonging?
+    <a href="https://www.goodreads.com/book/show/56043154-i-do-not-belong">I DO NOT BELONG</a> is a story of a young girl desperately trying 
+    to find herself and her place in the world after a tragic event 
+    in her life. A chance encounter with an elderly American 
+    couple and a misunderstanding on their part changes her life forever.
+    She is catapulted into a new world searching for her destiny. 
     Will she ever find it? 
-    It's a relatable story inspired 
-    by true events. An easy and fast read. 
+    It's a relatable story inspired by true events. 
+    An easy and fast read. 
     On Amazon, in paperback and kindle.
     </pre>
+    <p id="wingdings-b">b</p>
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
@@ -125,7 +122,6 @@
   <div id="pismo" class="fa fa-envelope fa-3x"></div>
   <div id="contact" class="kontakt-imejl">
     <p><a href="mailto: mimaarbidbook@gmail.com">Contact</a></p>
-    <!--<p><a href="mailto: mimaarbidbook@gmail.com">mimaarbid@gmail.com</a></p>-->
   </div>
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
