--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <body>
 
 <section  id="MimaArbid" class="mimaarbid-naslovna">
+  <header>
+    <h1>Mima Arbid</h1>
+  </header>
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
