--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 </article>
 <aside id="mimaabout">
   <div class="mimaarbid" id="about">
-    <header>ABOUT THE AUTHOR</header>
+    <header>
+      <h4>ABOUT THE AUTHOR</h4>
+    </header>
     <pre>
     Mima Arbid moved from former Yugoslavia as a young adult after completing her degree
     in English and Literature from University of Belgrade. She has traveled the world
