--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>
 </article>
 <article id="books" class="knjige">
-  <p id="belong">BOOKS</p>
+  <h3 id="belong">BOOKS</h3>
   <div class="knjige-izdanja">
     <p id="tooltip"><em>- First book : <a href="https://www.amazon.com/Mima-Arbid/e/B09TTP9TL4%3Fref=dbs_a_mng_rwt_scns_share">I DO NOT BELONG</a></em></p>
     <p><em>- Working on the second book</em></p>
