--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <p id="tooltip"><em>- First book : <a href="https://www.amazon.com/Mima-Arbid/e/B09TTP9TL4%3Fref=dbs_a_mng_rwt_scns_share">I DO NOT BELONG</a></em></p>
     <p><em>- Working on the second book</em></p>
   </div>
- </article>
- <article class="mima-lično">
+</article>
+<aside class="mima-lično">
   <img src="slike/mima2.png" width="353" height="353" alt="Mima's picture">
   <img src="slike/mima7.png" width="400" height="266" alt="Pen"/>
   <aside class="mima-text">
@@ -105,7 +105,7 @@
     </p>
     <p id="mima-potpis">Mima</p>
   </aside>
-</article>
+</aside>
 <aside id="mimaabout">
   <div class="mimaarbid" id="about">
     <header>
@@ -128,5 +128,6 @@
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
 </footer>
+
 </body>
 </html>
