--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   <link rel="preload" as="style" href="responsive.css" />
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/fonts/fontawesome-webfont.woff2?v=4.4.0" />
- 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
   <script src="knjiga.js" defer></script>
 </head>
