--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <article id="books" class="knjige">
   <h3 id="belong">BOOKS</h3>
   <div class="knjige-izdanja">
-    <p id="tooltip"><em>- First book : <a href="https://www.amazon.com/Mima-Arbid/e/B09TTP9TL4%3Fref=dbs_a_mng_rwt_scns_share">I DO NOT BELONG</a></em></p>
+    <p id="tooltip"><em>- First book : <a href="https://www.amazon.com/gp/product/B08MCMZVDH/ref=dbs_a_def_rwt_hsch_vapi_tkin_p1_i0">I DO NOT BELONG</a></em></p>
     <p><em>- Working on the second book</em></p>
   </div>
 </article>
