minify responsive.css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="preload" href="slike/pozadina.jpg" as="image" media="(min-width: 768px)" />
   <link rel="preload" href="slike/mobilni.jpg" as="image" media="(max-width: 767px)" />
   <link rel="preload" as="style" href="knjiga.css" />
-  <link rel="preload" as="style" href="responsive.css" />
+  <link rel="preload" as="style" href="responsive.min.css" />
   <link rel="stylesheet" href="knjiga.css" />
-  <link rel="stylesheet" href="responsive.css" />
+  <link rel="stylesheet" href="responsive.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
   <script src="knjiga.js" defer></script>
