--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preload" href="slike/pozadina.jpg" as="image" media="(min-width: 768px)" />
   <link rel="preload" href="slike/mobilni.jpg" as="image" media="(max-width: 767px)" />
-  <link rel="preload" as="style" href="knjiga.min.css" />
-  <link rel="preload" as="style" href="responsive.min.css" />
+  <!--<link rel="preload" as="style" href="knjiga.min.css" />
+  <link rel="preload" as="style" href="responsive.min.css" />-->
   <link rel="stylesheet" href="knjiga.min.css" />
   <link rel="stylesheet" href="responsive.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
