--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Artist, I Do Not Belong" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preload" href="slike/pozadina.webp" as="image" media="(min-width: 768px)" />
-  <link rel="preload" href="slike/mobilni.webp" as="image" media="(max-width: 767px)" />
+  <link rel="preload" href="slike/pozadina.jpg" as="image" media="(min-width: 768px)" />
+  <link rel="preload" href="slike/mobilni.jpg" as="image" media="(max-width: 767px)" />-->
   <link rel="preload" as="style" href="knjiga.min.css" />
   <link rel="preload" as="style" href="responsive.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
