--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </p>
   </div>
   <div class="slika-četkice">
-    <img  src="slike/mima6.png" alt="Painting Brushes" width="300" height="280" />
+    <img  src="slike/mima6W.webp" alt="Painting Brushes" width="300" height="280" />
   </div>
   <div class="slika-palme">
     <img src="slike/mima4.png" alt="Palm trees" width="630" height="483" />
@@ -95,7 +95,7 @@
 </article>
 <aside class="mima-lično">
   <img src="slike/mima2.png" width="353" height="353" alt="Mima's picture">
-  <img src="slike/mima7.png" width="400" height="266" alt="Pen"/>
+  <img src="slike/mima7W.webp" width="400" height="266" alt="Pen"/>
   <aside class="mima-text">
     <p>
       "She seemed completely oblivious to the beauty around her.
