--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </ul>
 </section>
 <aside class="biografija">
-  <img alt="Mima's picture" width="409" height="307" src="slike/bw.png" />
+  <img alt="Mima's picture" width="409" height="307" src="slike/bwW.webp" />
   <div class="biografija-text">
     <pre>
     Do you believe in destiny?
@@ -67,7 +67,7 @@
 </article>
 <article class="umetnički-blok2">
   <div class="slika-palme2">
-    <img src="slike/mima1.png" alt="Palm trees" width="380" height="476" />
+    <img src="slike/mima1W.webp" alt="Palm trees" width="380" height="476" />
     <p><i>Palm trees, acrylic on canvas</i></p>
   </div>
   <div class="slika-palme3">
