--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
 </article>
 <aside class="mima-lično">
-  <img src="slike/mima2.png" width="353" height="353" alt="Mima's picture">
+  <img src="slike/mima2W.webp" width="353" height="353" alt="Mima's picture">
   <img src="slike/mima7W.webp" width="400" height="266" alt="Pen"/>
   <aside class="mima-text">
     <p>
