--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preload" as="style" href="responsive.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
+  <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.min.css" />
   <link rel="stylesheet" href="responsive.min.css" />
 </head>
@@ -128,6 +129,5 @@
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
 </footer>
-<script src="knjiga.js" async></script>
 </body>
 </html>
