--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preload" as="style" href="responsive.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous" />
   <script src="knjiga.js" defer></script>
+  <script src="mobilni.js" async></script>
   <link rel="stylesheet" href="knjiga.min.css" />
   <link rel="stylesheet" href="responsive.min.css" />
 </head>
