--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
 </footer>
-<script src="mobilni.js" async></script>
+<script src="mobilni.js"></script>
 </body>
 </html>
