--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </aside>
 <article class="slika-planina">
   <div>
-    <img src="slike/mima3.png" alt="A picture of a mountain and a river" width="800" height="577" />
+    <img src="slike/mima3W.webp" alt="A picture of a mountain and a river" width="800" height="577" />
     <p><i>Landscape, oil on canvas</i></p>
   </div>
 </article>
