--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="preload" as="style" href="knjiga.min.css" />
   <link rel="preload" as="style" href="responsive.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous" />
-  <script src="mobilni.js" defer></script>
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.min.css" />
   <link rel="stylesheet" href="responsive.min.css" />
@@ -129,5 +128,6 @@
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
 </footer>
+<script src="mobilni.js" async></script>
 </body>
 </html>
