--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Artist, I Do Not Belong" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#222059" />
+  <meta name="theme-color" content="blue" />
   <link rel="preload" href="slike/pozadinaW.webp" as="image" media="(min-width: 768px)" />
   <link rel="preload" href="slike/mobilniW.webp" as="image" media="(max-width: 767px)" />
   <link rel="preload" as="style" href="knjiga.min.css" />
