--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="slike/mobilniW.webp" as="image" media="(max-width: 767px)" />
   <link rel="preload" as="style" href="knjiga.min.css" />
   <link rel="preload" as="style" href="responsive.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin />
   <script src="knjiga.js" defer></script>
   <script src="mobilni.js" defer></script>
   <link rel="stylesheet" href="knjiga.min.css" />
