--- a/index.html
+++ b/index.html
@@ -18,7 +18,31 @@
   <link rel="stylesheet" href="responsive.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin />
 </head>
-
+<style>
+  @media screen and (max-width: 767px) {
+  /* PRVA SEKCIJA */
+  .mimaarbid-naslovna {
+    background-image: url('slike/mobilniW.webp');
+    background-size: cover;
+    height: 92.6vw;
+    display: flex;
+  }
+  .navigation-bar {
+    position: relative;
+    left: -5%;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+  }
+  .navigation-bar li a {
+    font-size: 1.25em;
+    color:   #F7F3D6;
+    font-weight: bolder;
+    padding: 0 17px;
+    letter-spacing: 2.3px;
+  }
+}
+</style>
 <body>
   <header id="glava">
     <h1>Mima Arbid</h1>
