--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Artist, I Do Not Belong" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="font" />
   <link rel="preload" href="slike/pozadinaW.webp" as="image" media="(min-width: 768px)" />
   <link rel="preload" href="slike/mobilniW.webp" as="image" media="(max-width: 767px)" />
   <link rel="preload" as="style" href="knjiga.min.css" />
@@ -16,7 +17,7 @@
   <script src="mobilni.js" defer></script>
   <link rel="stylesheet" href="knjiga.min.css" />
   <link rel="stylesheet" href="responsive.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
   <header id="glava">
