--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <img  src="slike/mima6W.webp" alt="Painting Brushes" width="300" height="280" />
   </div>
   <div class="slika-palme">
-    <img src="slike/mima4.png" alt="Palm trees" width="630" height="483" />
+    <img src="slike/mima4W.webp" alt="Palm trees" width="630" height="483" />
     <p><i>Palm trees, acrylic on canvas</i></p>
   </div>
 </article>
@@ -70,7 +70,7 @@
     <p><i>Palm trees, acrylic on canvas</i></p>
   </div>
   <div class="slika-palme3">
-    <img src="slike/mima5.png" alt="Palm trees" width="630" height="470" />
+    <img src="slike/mima5W.webp" alt="Palm trees" width="630" height="470" />
     <p><i>Palm trees, acrylic on canvas</i></p>
   </div>
 </article>
