--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <script src="mobilni.js" defer></script>
   <link rel="stylesheet" href="knjiga.min.css" />
   <link rel="stylesheet" href="responsive.min.css" />
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />-->
-<script src="https://kit.fontawesome.com/68977216dc.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous" />
 </head>
 <body>
   <header id="glava">
