--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Artist, I Do Not Belong" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#383C52 " />
   <link rel="preload" href="slike/pozadinaW.webp" as="image" media="(min-width: 768px)" />
   <link rel="preload" href="slike/mobilniW.webp" as="image" media="(max-width: 767px)" />
   <link rel="preload" as="style" href="knjiga.min.css" />
@@ -20,10 +19,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous" />
 </head>
 <body>
+<section  id="MimaArbid" class="mimaarbid-naslovna">
   <header id="glava">
     <h1>Mima Arbid</h1>
   </header>
-<section  id="MimaArbid" class="mimaarbid-naslovna">
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
@@ -66,6 +65,7 @@
   </div>
 </article>
 <article class="umetnički-blok2">
+  <h3>Palm trees</h3>
   <div class="slika-palme2">
     <img src="slike/mima1W.webp" alt="Palm trees" width="380" height="476" />
     <p><i>Palm trees, acrylic on canvas</i></p>
@@ -81,6 +81,7 @@
     <p>Palm trees, beaches and perpetual sunshine..."</p>
 </aside>
 <article class="slika-planina">
+  <h3>Palm trees</h3>
   <div>
     <img src="slike/mima3W.webp" alt="A picture of a mountain and a river" width="800" height="577" />
     <p><i>Landscape, oil on canvas</i></p>
@@ -97,15 +98,15 @@
   <img src="slike/mima2W.webp" width="353" height="353" alt="Mima's picture">
   <img src="slike/mima7W.webp" width="400" height="266" alt="Pen"/>
   <aside class="mima-text">
-    <p>
+    <div>
       "She seemed completely oblivious to the beauty around her.
       Her mind was back where it all began all those years ago.
       Tears rolled down her cheeks as, once again, she was that
       insecure, confused, devastated twelve-year-old..."
-    <p>From I DO NOT BELONG</p>
-    </p>
-    <p id="mima-potpis">Mima</p>
-  </aside>
+      <p>From I DO NOT BELONG</p>
+      <p id="mima-potpis">Mima</p>
+    </div>
+</aside>
 </aside>
 <aside id="mimaabout">
   <div class="mimaarbid" id="about">
@@ -124,7 +125,7 @@
   <p id="mimaarbid-text">Mima Arbid</p>
   <div id="pismo" class="fa fa-envelope fa-3x"></div>
   <div id="contact" class="kontakt-imejl">
-    <p><a href="mailto: mimaarbidbook@gmail.com">Contact</a></p>
+    <p><a href="mailto:mimaarbidbook@gmail.com">Contact</a></p>
   </div>
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
